# COMP-310-Operating-Systems

./: .gitignore  README.md
assignment-1/: .cproject  .project  CMakeLists.txt  Makefile  linkedlist.h  oscode.c  test.txt
assignment-2/: .cproject  .project  CMakeLists.txt
assignment-2/src/: Makefile  assignment-2-client.c  assignment-2-server.c  assignment-2.c  authentication.h  client.c  console_output_and_explanation.txt  fifo_buffer.h  fifo_buffer_ops.c  fifo_buffer_ops.h  print_job.h  shared_mem.h  test-solution.sh
assignment-3/: .gitignore  CMakeLists.txt
assignment-3/src/: FOGARTY_SUBMISSION_README  Makefile  constants.h  disk_emu.c  sfs_api.c  sfs_api.h  sfs_test.c  sfs_test2.c  test.sh
assignment-3/src/data_structures/: directory.h  directory_cache.h  disk_block_cache.h  file_descriptor.h  file_descriptor_table.h  free_bitmap.h  i_node.h  i_node_table.h  in_memory_file_system.h  indirect_block_pointer.h  super_block.h
assignment-3/src/helpers/: disk_access.h
assignment-4/: CMakeLists.txt
assignment-4/src/: Makefile  README.txt  main.c  test.sh  tests.c  unit_tests.c
assignment-4/src/malloc/: malloc.c  malloc.h  memory_allocation.c
assignment-4/src/malloc/structs/: free_block.h  free_block_list.h  memory.h  tag.h  unfree_block.h
assignment-4/src/malloc/utils/: constants.h  malloc_helpers.h
assignment-4/src/test/: test_memory_allocation.h  test_schema.h
assignment-4/src/test/structs/: test_free_block_list.h  test_free_blocks.h  test_unfree_block.h
assignment-4/src/test/utils/: test_malloc_helpers.h
